// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorStudentListPageComponent should snap correctly when course isChecked=false 1`] = `
<tm-instructor-student-list-page
  courseDetailsList={[Function Array]}
  courseStudentListSectionDataMap={[Function Object]}
  courses={[Function Array]}
  httpRequestService={[Function HttpRequestService]}
  isDisplayArchive="false"
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  searchQuery=""
  sectionDetailsList={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentDetailsList={[Function Array]}
  teamDetailsList={[Function Array]}
  user="undefined"
>
  <h1>
     Student List
  </h1><div
    class="card bg-light mb-4 pb-3"
  >
    <div
      class="card-body"
    >
      <div
        class="form-group"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            ng-reflect-model=""
            placeholder="Charlie Barnes"
            type="text"
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-primary"
            >
              Search
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><h2>
     Filter Students 
  </h2><div
    class="section pb-3"
  >
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="checkbox-outer-div pb-3"
          >
            <input
              type="checkbox"
            />
            <label
              class="ml-1"
            >
               Display Archived Courses 
            </label>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-sm-3 float-left"
            >
              <div
                class="text-color-primary pb-3"
              >
                <strong>
                   Courses 
                </strong>
              </div>
              <div
                class="checkbox-outer-div pb-3"
              >
                <input
                  type="checkbox"
                />
                <label
                  class="ml-1"
                >
                  <strong>
                     Select All 
                  </strong>
                </label>
              </div>
              
              <div
                class="checkbox-outer-div"
              >
                <input
                  type="checkbox"
                />
                <label
                  class="ml-1"
                >
                   []:  
                </label>
              </div>
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="p-2"
  >
    
    <div
      class="card border mb-3 p-0"
    >
      <div
        class="card-header font-weight-bold text-dark-blue bg-light-blue"
        ng-reflect-klass="card-header font-weight-bold"
        ng-reflect-ng-class="[object Object]"
      >
        <strong>
          []:
        </strong>
          
        <div
          class="arrow-sign"
        >
          <button
            class="btn btn-info btn-xs"
            ng-reflect-query-params="[object Object]"
            ng-reflect-router-link="/web/instructor/courses/enroll"
            routerlink="/web/instructor/courses/enroll"
            tabindex="0"
          >
             Enroll 
          </button>
          <i
            class="fas fa-chevron-up pl-3"
            hidden=""
          />
          <i
            class="fas fa-chevron-down pl-3"
          />
        </div>
      </div>
      <div
        class="card-body p-0"
      >
        <tm-student-list
          ng-reflect-is-hide-table-head="true"
          ng-reflect-list-of-students-to-hide=""
          ng-reflect-sections=""
          ng-reflect-use-gray-heading="true"
        />
      </div>
    </div>
  </div>
</tm-instructor-student-list-page>
`;

exports[`InstructorStudentListPageComponent should snap correctly when course isChecked=true 1`] = `
<tm-instructor-student-list-page
  courseDetailsList={[Function Array]}
  courseStudentListSectionDataMap={[Function Object]}
  courses={[Function Array]}
  httpRequestService={[Function HttpRequestService]}
  isDisplayArchive="false"
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  searchQuery=""
  sectionDetailsList={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentDetailsList={[Function Array]}
  teamDetailsList={[Function Array]}
  user="undefined"
>
  <h1>
     Student List
  </h1><div
    class="card bg-light mb-4 pb-3"
  >
    <div
      class="card-body"
    >
      <div
        class="form-group"
      >
        <div
          class="input-group"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            ng-reflect-model=""
            placeholder="Charlie Barnes"
            type="text"
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-primary"
            >
              Search
            </button>
          </div>
        </div>
      </div>
    </div>
  </div><h2>
     Filter Students 
  </h2><div
    class="section pb-3"
  >
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form form-horizontal"
        >
          <div
            class="checkbox-outer-div pb-3"
          >
            <input
              type="checkbox"
            />
            <label
              class="ml-1"
            >
               Display Archived Courses 
            </label>
          </div>
          <div
            class="form-group row"
          >
            <div
              class="col-sm-3 float-left"
            >
              <div
                class="text-color-primary pb-3"
              >
                <strong>
                   Courses 
                </strong>
              </div>
              <div
                class="checkbox-outer-div pb-3"
              >
                <input
                  type="checkbox"
                />
                <label
                  class="ml-1"
                >
                  <strong>
                     Select All 
                  </strong>
                </label>
              </div>
              
              <div
                class="checkbox-outer-div"
              >
                <input
                  type="checkbox"
                />
                <label
                  class="ml-1"
                >
                   []:  
                </label>
              </div>
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
            <div
              class="col-sm-3 float-left"
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="p-2"
  >
    
    <div
      class="card border mb-3 p-0"
    >
      <div
        class="card-header font-weight-bold text-dark-blue bg-light-blue"
        ng-reflect-klass="card-header font-weight-bold"
        ng-reflect-ng-class="[object Object]"
      >
        <strong>
          []:
        </strong>
          
        <div
          class="arrow-sign"
        >
          <button
            class="btn btn-info btn-xs"
            ng-reflect-query-params="[object Object]"
            ng-reflect-router-link="/web/instructor/courses/enroll"
            routerlink="/web/instructor/courses/enroll"
            tabindex="0"
          >
             Enroll 
          </button>
          <i
            class="fas fa-chevron-up pl-3"
          />
          <i
            class="fas fa-chevron-down pl-3"
            hidden=""
          />
        </div>
      </div>
      <div
        class="card-body p-0"
      >
        <tm-student-list
          ng-reflect-is-hide-table-head="false"
          ng-reflect-list-of-students-to-hide=""
          ng-reflect-sections=""
          ng-reflect-use-gray-heading="true"
        />
      </div>
    </div>
  </div>
</tm-instructor-student-list-page>
`;
